<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/contact">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="26dp"
        android:background="@android:color/transparent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/contact_us"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:text="@string/feedback"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp">

                <ImageView
                    android:id="@+id/fooduanImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/burgerz"
                    android:contentDescription="@string/fooduan"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#642711">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/business_name"
                    android:textColor="#fff"
                    android:textSize="29sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/reenie_beanie" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:text="@string/burgers_hotdogs_more"
                    android:textColor="#fff"
                    android:textSize="12sp"
                    app:fontFamily="sans-serif-light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    app:fontFamily="sans-serif-light"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="26dp"
                    android:textColor="#fff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours_of_operation"
                    app:fontFamily="sans-serif-light"
                    android:drawableLeft="@drawable/web"
                    android:drawablePadding="8dp"
                    android:layout_marginLeft="26dp"
                    android:textColor="#fff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_handle"
                    app:fontFamily="sans-serif-light"
                    android:drawableLeft="@drawable/facebook"
                    android:drawablePadding="6dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="#fff"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="160dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/hamburger"
        android:contentDescription="@string/burger_icon" />

</RelativeLayout>